crates/plotnik-tests/tests/04-emit/bytecode/anchors/strict_first_child_impossible.txt
Q = (function_declaration .! (identifier))
------------------ DIAGNOSTICS -------------------
error: with strict adjacency (`.!`), the first child of `function_declaration` must be `identifier`, but `function_declaration` begins with `"async"` or `"function"`
 --> query.ptk:1:6
  |
1 | Q = (function_declaration .! (identifier))
  |      ^^^^^^^^^^^^^^^^^^^^
  |
help: `.!` allows nothing between — not even anonymous tokens or comments; the soft anchor `.` skips those: `(function_declaration . (identifier))`
